--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <main>
         <h1 id=title>MARIO BUNGE</h1>
-        <h2 id=tribute-info>Mario Augusto Bunge (Florida Oeste, 21 de septiembre de 1919-Montreal, 24 de febrero de 2020) ​fue un epistemólogo, filósofo, físico, y crítico argentino nacionalizado canadiense, fue de los científicos hispanohablantes más citados de la historia.​ Durante su larga trayectoria, Bunge se declaró como realista, cientificista, sistemista, materialista, defensor del realismo científico y promotor de la filosofía exacta.</h2>
+        <h2 id=tribute-info>Mario Augusto Bunge (Florida Oeste, 21 de septiembre de 1919-Montreal, 24 de febrero de 2020) ​fue un epistemólogo, 
+            filósofo, físico, y crítico argentino nacionalizado canadiense, fue de los científicos hispanohablantes más 
+            citados de la historia.​ Durante su larga trayectoria, Bunge se declaró como realista, cientificista, 
+            sistemista, materialista, defensor del realismo científico y promotor de la filosofía exacta.</h2>
         <div id=img-div><img id=image src="https://upload.wikimedia.org/wikipedia/commons/2/28/MarioBungesmall.jpg" alt="laptop image">
             <p id=img-caption>Una pseudociencia es un montón de macanas (sandeces) que se venden como ciencia. <br>
             "100 ideas" (2006), Mario Bunge</p>
@@ -51,6 +54,7 @@
    </main>
    <div id=footer>
     <a id=tribute-link target="_blank" href="https://es.wikipedia.org/wiki/Mario_Bunge">Wikipedia</a>
+    <p id=by>Matias Calvar  </p>
     </div> 
 </body>
 </html>
