--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,7 +38,6 @@
             el médico argentino Augusto Bunge; del físico checo Guido Beck, del matemático argentino Alberto González Domínguez; del también 
             argentino, matemático, físico e informático, Manuel Sadosky; del sociólogo y psicólogo italiano Gino Germani; del sociólogo 
             estadounidense Robert King Merton, y del filósofo franco-polaco Émile Meyerson.
-            </p>
             </p>
             <h3>Reconocimientos</h3>
             Mario Bunge fue distinguido con 21 doctorados honoris causa y cuatro profesorados honorarios por universidades de las Américas y 
