--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             filósofo, físico, y crítico argentino nacionalizado canadiense, fue de los científicos hispanohablantes más 
             citados de la historia.​ Durante su larga trayectoria, Bunge se declaró como realista, cientificista, 
             sistemista, materialista, defensor del realismo científico y promotor de la filosofía exacta.</h2>
-        <div id=img-div><img id=image src="https://upload.wikimedia.org/wikipedia/commons/2/28/MarioBungesmall.jpg" alt="laptop image">
+        <div id=img-div><img id=image src="https://upload.wikimedia.org/wikipedia/commons/2/28/MarioBungesmall.jpg" alt="foto de Mario Bunge">
             <p id=img-caption>Una pseudociencia es un montón de macanas (sandeces) que se venden como ciencia. <br>
             "100 ideas" (2006), Mario Bunge</p>
         </div>
